--- a/src/components/ScrollArea.css
+++ b/src/components/ScrollArea.css
@@ -1,22 +1,33 @@
 ﻿.scroll-area {
     overflow-y: auto;
+    color: #00000000;
+    transition: color ease-out .1s;
+    transition-delay: 2s;
+
+    -webkit-text-fill-color: black;
 }
 
+.scroll-area:hover {
+    color: #666666FF;
+    transition: color ease-in .1s;
+}
 .scroll-area::-webkit-scrollbar {
-    border: none;
-    background-color: transparent;
-    width: 8px;
-}
-.scroll-area::-webkit-scrollbar-thumb { 
-    border-radius: 6px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #aaa;
-}
-.scroll-area::-webkit-scrollbar-thumb:hover { 
-    background-color: #888;
+    width: 14px;
 }
 
-.scroll-area::-webkit-scrollbar-track { 
-    border-radius: 4px;
-    background-color: #fafafa;
+.scroll-area::-webkit-scrollbar-thumb {
+    background-clip: content-box;
+    border: 4px solid transparent;
+    border-radius: 7px;
+    box-shadow: inset 0 0 0 10px;
+}
+
+.scroll-area::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+}
+
+.container::-webkit-scrollbar-corner {
+    background-color: transparent;
 }
