--- a/src/components/ScrollArea.css
+++ b/src/components/ScrollArea.css
@@ -1,33 +1,61 @@
-﻿.scroll-area {
-    overflow-y: auto;
-    color: #00000000;
-    transition: color ease-out .1s;
-    transition-delay: 2s;
+﻿
 
-    -webkit-text-fill-color: black;
+.scrollArea {
+    --scrollbar-background-color: #0000000B;
+    --scrollbar-background-color-hover: #00000016;
+    --scrollbar-thumb-color: #86848DFF;
+    --scrollbar-corner-color: #00000038;
+
+    overflow: hidden;
+    --scrollbar-size: 6px;
 }
 
-.scroll-area:hover {
-    color: #666666FF;
-    transition: color ease-in .1s;
-}
-.scroll-area::-webkit-scrollbar {
-    width: 14px;
+.scrollAreaViewport {
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
 }
 
-.scroll-area::-webkit-scrollbar-thumb {
-    background-clip: content-box;
-    border: 4px solid transparent;
-    border-radius: 7px;
-    box-shadow: inset 0 0 0 10px;
+.scrollAreaScrollbar {
+    display: flex;
+    /* ensures no selection */
+    user-select: none;
+    /* disable browser handling of all panning and zooming gestures on touch devices */
+    touch-action: none;
+    padding: 2px;
+    background: var(--scrollbar-background-color);
+    transition: background 160ms ease-out;
+}
+.scrollAreaScrollbar:hover {
+    background: var(--scrollbar-background-color-hover);
+}
+.scrollAreaScrollbar[data-orientation='vertical'] {
+    width: var(--scrollbar-size);
+}
+.scrollAreaScrollbar[data-orientation='horizontal'] {
+    flex-direction: column;
+    height: var(--scrollbar-size);
 }
 
-.scroll-area::-webkit-scrollbar-button {
-    width: 0;
-    height: 0;
-    display: none;
+.scrollAreaThumb {
+    flex: 1;
+    background: var(--scrollbar-thumb-color);
+    border-radius: var(--scrollbar-size);
+    position: relative;
+}
+/* increase target size for touch devices https://www.w3.org/WAI/WCAG21/Understanding/target-size.html */
+.scrollAreaThumb::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    min-width: 44px;
+    min-height: 44px;
 }
 
-.container::-webkit-scrollbar-corner {
-    background-color: transparent;
+.scrollAreaCorner {
+    background: var(--scrollbar-corner-color);
 }
